salesforce/force-app/main/default/objects/Compliance_Document__c/Compliance_Document__c.object-meta.xml
<CustomObject>
    <description>Stores structured compliance documents uploaded by suppliers</description>
    <label>Compliance Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>