salesforce/force-app/main/default/objects/Compliance_Document__c/fields/Direct_or_Indirect__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_Indirect__c</fullName>
    <description>Whether the supplier provides direct production materials or indirect services</description>
    <label>Direct / Indirect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <label>Direct (Production)</label>
            </value>
            <value>
                <fullName>Indirect</fullName>
                <label>Indirect (MRO/Services)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>