salesforce/force-app/main/default/objects/Compliance_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Compliance Report</fullName>
            </value>
            <value>
                <fullName>Audit Report</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>