salesforce/force-app/main/default/objects/Compliance_Document__c/fields/Latest_Extraction__c.field-meta.xml
<CustomField>
    <fullName>Latest_Extraction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Extraction</label>
    <referenceTo>Document_Extraction__c</referenceTo>
    <relationshipLabel>Compliance Documents (Latest Extraction)</relationshipLabel>
    <relationshipName>Compliance_Documents_Latest</relationshipName>
    <type>Lookup</type>
</CustomField>