salesforce/force-app/main/default/objects/Compliance_Document__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <description>Stores the ContentDocumentId of the source file</description>
    <label>Source File</label>
    <length>18</length>
    <type>Text</type>
</CustomField>