salesforce/force-app/main/default/objects/Compliance_Document__c/fields/Upload_Channel__c.field-meta.xml
<CustomField>
    <fullName>Upload_Channel__c</fullName>
    <label>Upload Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>