salesforce/force-app/main/default/objects/Compliance_Document__c/fields/Uploaded_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compliance Documents (Uploaded By Contact)</relationshipLabel>
    <relationshipName>Compliance_Documents_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>