salesforce/force-app/main/default/objects/Compliance_Document__c/fields/Uploaded_By_User__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Compliance Documents (Uploaded By User)</relationshipLabel>
    <relationshipName>Compliance_Documents_Uploaded</relationshipName>
    <type>Lookup</type>
</CustomField>